data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1544.wast
;; 5. **Test Description**: Implement a loop with a `br_if` instruction, combined with other stack-consuming operations. The test checks if `br_if` appropriately manages the operand stack as per constraints.    - **Constraint Checked**: Stack polymorphism and operand stack management.    - **Relation to Infinite Loops**: If the operand stack is mismanaged, the loop can operate on incorrect conditions, not breaking out and looping indefinitely.

(assert_invalid
  (module 
    (func $stack-mismanagement
      (loop $label (result i32)
        (i32.const 0)
        (i32.const 1)
        (select)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)